--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,15 @@
 events {}
 http {
+    upstream flask-app {
+        server duo-app-1:5500;
+        server duo-app-2:5500;
+        server duo-app-3:5500;
+    }
+
     server {
         listen 80;
         location / {
-            proxy_pass http://flask-app:5500;
+            proxy_pass http://flask-app;
         }
     }
 }
